Se adelanta LND

--- a/LND/unidad-02/tareas/tarea14-infinity/index.html
+++ b/LND/unidad-02/tareas/tarea14-infinity/index.html
@@ -8,9 +8,13 @@
 </head>
 <body>
     <header>
-        <img src="./img/banner.gif" alt="banner" height=""/>
         <div>
-            <h2 id="title">Jess Dot Zero</h2>
+            <h1 class="title">JessDotZero</h1>
+            <ul>
+                <li class="button"><a href="https://github.com/JesusLugo2002">GitHub</a></li>
+                <li class="button"><a class="description" href="https://jess-dot-zero.itch.io/">Itch.io</a></li>
+                <li class="button"><a class="description" href="https://steamcommunity.com/profiles/76561199222266170/">Steam</a></li>
+            </ul>
         </div>
     </header>
 </body>
