--- a/LND/unidad-02/tareas/tarea14-infinity/index.html
+++ b/LND/unidad-02/tareas/tarea14-infinity/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JessDotZero</title>
     <link rel="stylesheet" href="style/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -12,8 +15,8 @@
             <h1 class="title">JessDotZero</h1>
             <ul>
                 <li class="button"><a href="https://github.com/JesusLugo2002">GitHub</a></li>
-                <li class="button"><a class="description" href="https://jess-dot-zero.itch.io/">Itch.io</a></li>
-                <li class="button"><a class="description" href="https://steamcommunity.com/profiles/76561199222266170/">Steam</a></li>
+                <li class="button"><a href="https://jess-dot-zero.itch.io/">Itch.io</a></li>
+                <li class="button"><a href="https://steamcommunity.com/profiles/76561199222266170/">Steam</a></li>
             </ul>
         </div>
     </header>
