Se adelanta pagina de de infinity

--- a/LND/unidad-02/tareas/tarea14-infinity/index.html
+++ b/LND/unidad-02/tareas/tarea14-infinity/index.html
@@ -5,20 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JessDotZero</title>
     <link rel="stylesheet" href="style/index.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/brands.css">
 </head>
 <body>
-    <header>
-        <div>
-            <h1 class="title">JessDotZero</h1>
-            <ul>
-                <li class="button"><a href="https://github.com/JesusLugo2002">GitHub</a></li>
-                <li class="button"><a href="https://jess-dot-zero.itch.io/">Itch.io</a></li>
-                <li class="button"><a href="https://steamcommunity.com/profiles/76561199222266170/">Steam</a></li>
-            </ul>
-        </div>
-    </header>
+    <nav class="navbar">
+        <ul>
+            <li><a href="main_project.html">Las Altas Tierras</a></li>
+            <li><a href="about.html">Sobre mi</a></li>
+            <li><a href="projects.html">Proyectos</a></li>
+            <li><a href="notes.html">Notas</a></li>
+        </ul>
+        <h1><a href="#">JessDotZero</a></h1>
+    </nav>
+    <main></main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
