Se adelanta la página

--- a/LND/unidad-02/tareas/tarea14-infinity/index.html
+++ b/LND/unidad-02/tareas/tarea14-infinity/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JessDotZero</title>
     <link rel="stylesheet" href="style/index.css">
-    <link rel="stylesheet" href="style/brands.css">
+    <link rel="stylesheet" href="style/navbar.css">
 </head>
 <body>
     <nav class="navbar">
@@ -15,7 +15,7 @@
             <li><a href="projects.html">Proyectos</a></li>
             <li><a href="notes.html">Notas</a></li>
         </ul>
-        <h1><a href="#">JessDotZero</a></h1>
+        <h1><a href="index.html">JessDotZero</a></h1>
     </nav>
     <main></main>
     <footer>
