--- a/LND/unidad-02/tareas/tarea14-infinity/notes.html
+++ b/LND/unidad-02/tareas/tarea14-infinity/notes.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JessDotZero - Anotaciones</title>
-    <link rel="stylesheet" href="/style/main.css">
+    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="style/navbar.css">
 </head>
 <body>
-    
+    <nav class="navbar">
+        <ul>
+            <li><a href="main_project.html">Las Altas Tierras</a></li>
+            <li><a href="about.html">Sobre mi</a></li>
+            <li><a href="projects.html">Proyectos</a></li>
+            <li><a href="notes.html">Notas</a></li>
+        </ul>
+        <h1><a href="index.html">JessDotZero</a></h1>
+    </nav>
+    <main>
+        <div class="title">
+            <h1>Posts</h1>
+        </div>
+        <div class="container">
+            <h2>WIP</h2>
+        </div>
+    </main>
 </body>
 </html>
