Se adelanta pagina

--- a/LND/unidad-02/tareas/tarea14-infinity/about.html
+++ b/LND/unidad-02/tareas/tarea14-infinity/about.html
@@ -22,8 +22,30 @@
             <h1>Sobre mi</h1>
         </div>
         <div class="container">
-            <h2>WIP</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor numquam harum nesciunt sed dignissimos quisquam soluta dolore, et architecto maxime neque facilis placeat fugit maiores reiciendis quidem error voluptas quasi!</p>
+            <section id="about-me">
+                <h2>¿Quién soy?</h2>
+                <p>Jesús Lugo, escritor, programador y friki con F mayúscula, nací y me crié en Venezuela, estudié el bachiller en Colombia y seguí mi viaje a las Islas Canarias, España, donde actualmente estoy estudiando un grado superior de desarrollo de aplicaciones web y estoy trabajando en el deseo ferviente de "mostraré al mundo lo que he creado: mi otro yo".</p>
+            </section>       
+            <section id="hobbies">
+                <h2>Aficiones</h2>
+                <ul>
+                    <li><strong>Los videojuegos</strong> es lo primero que pienso cuando hablo sobre las cosas que me gustan. Indies enjoyer, buscador de aventuras singleplayer e historias interesantes. Mis juegos favoritos: Bloodborne, Minecraft, The Binding of Isaac, Undertale y, con el que estoy actualmente, Red Dead Redemption 2. Tengo un canal de Youtube donde subo clips aleatorios de las cosas que he jugado (sin comentarios porque soy tímido).</li>
+                    <li><strong>La escritura:</strong> a raíz de querer crear mi propia historia, inmersiva y cautivadora, empecé poco a poco a redactar guiones sueltos, descripciones  y situaciones que, sin darme cuenta, me llevaron a tomarme muy en serio el papel de escritor. Pertenecí a un club de escritores en Colombia y gané un concurso de relatos, publicando así mi relato "Hombre Pino, Hombre Sombra" en la antología "Intriga en las Sombras".</li>
+                    <li><strong>La programación:</strong> cuando ya supe la historia que quería mostrar al mundo, empecé a estudiar el cómo mostrarla, y qué mejor manera que creando lo que me encanta: un videojuego. He experimentado con GameMaker Studio, con Unity y, actualmente, sigo con Godot Engine, creando un repositorio de minijuegos para HTML5.</li>
+                </ul>
+            </section>
+            <section id="contact">
+                <h2>Redes y contacto</h2>
+                <ul>
+                    <li>GitHub</li>
+                    <li>Itch.io</li>
+                    <li>Gmail</li>
+                    <li>Steam</li>
+                    <li>Youtube</li>
+                    <li>Twitch</li>
+                    <li>Discord</li>
+                </ul>
+            </section>                                                                                                                         
         </div>
     </main>
 </body>
