Se adelanta pagina

--- a/LND/unidad-02/tareas/tarea14-infinity/about.html
+++ b/LND/unidad-02/tareas/tarea14-infinity/about.html
@@ -24,7 +24,7 @@
         <div class="container">
             <section id="about-me">
                 <h2>¿Quién soy?</h2>
-                <p>Jesús Lugo, escritor, programador y friki con F mayúscula, nací y me crié en Venezuela, estudié el bachiller en Colombia y seguí mi viaje a las Islas Canarias, España, donde actualmente estoy estudiando un grado superior de desarrollo de aplicaciones web y estoy trabajando en el deseo ferviente de "mostraré al mundo lo que he creado: mi otro yo".</p>
+                <p>Jesús Lugo, escritor, programador y friki con F mayúscula, nací y me crié en Venezuela, estudié el bachiller en Colombia y seguí mi viaje a las Islas Canarias, España, donde actualmente estoy estudiando un grado superior de desarrollo de aplicaciones web y estoy trabajando en el deseo ferviente de <b>"mostraré al mundo lo que he creado: mi otro yo"</b>.</p>
             </section>       
             <section id="hobbies">
                 <h2>Aficiones</h2>
