--- a/LND/unidad-02/tareas/tarea14-infinity/projects.html
+++ b/LND/unidad-02/tareas/tarea14-infinity/projects.html
@@ -22,7 +22,15 @@
             <h1>Mis proyectos</h1>
         </div>
         <div class="container">
-            <h2>WIP</h2>
+            <section>
+                Aquí recopilo los distintos proyectos en los que actualmente estoy trabajando o he participado de alguna u otra forma como desarrollador, diseñador o escritor (exceptuando los relacionados con las Altas Tierras: esos los puede conseguir en el siguiente enlace)
+                <ul>
+                    <li>Página web de demostración de Mundo Mágico L&L</li>
+                    <li>Just a game about a hungry crow - Godot Jam</li>
+                    <li>Colaboración para The Box - Godot Jam</li>
+                    <li>Turbulent Ship (Remake) - En progreso</li>
+                </ul>
+            </section>
         </div>
     </main>
 </body>
