Se progresa pagina

--- a/LND/unidad-02/tareas/tarea14-infinity/projects.html
+++ b/LND/unidad-02/tareas/tarea14-infinity/projects.html
@@ -24,12 +24,44 @@
         <div class="container">
             <section>
                 Aquí recopilo los distintos proyectos en los que actualmente estoy trabajando o he participado de alguna u otra forma como desarrollador, diseñador o escritor (exceptuando los relacionados con las Altas Tierras: esos los puede conseguir en el siguiente enlace)
-                <ul>
-                    <li>Página web de demostración de Mundo Mágico L&L</li>
-                    <li>Just a game about a hungry crow - Godot Jam</li>
-                    <li>Colaboración para The Box - Godot Jam</li>
-                    <li>Turbulent Ship (Remake) - En progreso</li>
-                </ul>
+                <div class="projects-gallery">
+                    <div class="item">
+                        <a href="https://jess-dot-zero.itch.io/just-a-game-about-a-hungry-crow">
+                            <h4>Just a game about a hungry crow - Godot Jam</h4>
+                            <img src="img/a-game-about-hungry-crow.png" alt="crow">
+                        </a>
+                    </div>
+                    <div class="item">
+                        <a href="">
+                            <h4>Colaboración para The Box - Godot Jam</h4>
+                            <img src="img/placeholder-bg.png" alt="placeholder">
+                        </a>
+                    </div>    
+                    <div class="item">
+                        <a href="">
+                            <!-- <h4>Generador de banners personalizados para Mundo Mágico L&L - En progreso</h4> -->
+                            <img src="img/placeholder-bg.png" alt="placeholder">
+                        </a>
+                    </div>
+                    <div class="item">
+                        <a href="">
+                            <!-- <h4>Turbulent Ship (Remake) - En progreso</h4> -->
+                            <img src="img/placeholder-bg.png" alt="placeholder">
+                        </a>
+                    </div>
+                    <div class="item">
+                        <a href="">
+                           <!-- RELLENO -->
+                            <img src="img/placeholder-bg.png" alt="placeholder">
+                        </a>
+                    </div>
+                    <div class="item">
+                        <a href="">
+                            <!-- RELLENO -->
+                            <img src="img/placeholder-bg.png" alt="placeholder">
+                        </a>
+                    </div>
+                </div>    
             </section>
         </div>
     </main>
