Se adelanta la pagina

--- a/LND/unidad-02/tareas/tarea14-infinity/about.html
+++ b/LND/unidad-02/tareas/tarea14-infinity/about.html
@@ -17,6 +17,7 @@
         </ul>
         <h1><a href="index.html">JessDotZero</a></h1>
     </nav>
+    <div class="color-bg"></div>
     <main>
         <div class="title">
             <h1>Sobre mi</h1>
@@ -35,7 +36,7 @@
                 </ul>
             </section>
             <section id="contact">
-                <h2>Redes y contacto</h2>
+                <h2>Redes</h2>
                 <ul>
                     <li>GitHub</li>
                     <li>Itch.io</li>
@@ -43,10 +44,22 @@
                     <li>Steam</li>
                     <li>Youtube</li>
                     <li>Twitch</li>
-                    <li>Discord</li>
                 </ul>
+                <h2>Contacta</h2>
+                <form action="form-data.dat" method="get">
+                    <label for="i-email">Email</label><br>
+                    <input type="email" name="i-email" id="i-email" size="50"><br>
+                    <label for="i-asunto">Asunto</label><br>
+                    <input type="text" name="i-asunto" id="i-asunto" size="50"><br>
+                    <label for="i-mensaje">Mensaje</label><br>
+                    <textarea name="i-mensaje" id="i-mensaje" cols="100" rows="10"></textarea><br>
+                    <input type="submit" value="Enviar">
+                </form>
             </section>                                                                                                                         
         </div>
     </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
