--- a/LND/unidad-02/tareas/tarea14-infinity/main_project.html
+++ b/LND/unidad-02/tareas/tarea14-infinity/main_project.html
@@ -17,6 +17,7 @@
         </ul>
         <h1><a href="index.html">JessDotZero</a></h1>
     </nav>
+    <div class="color-bg"></div>
     <main>
         <div class="title">
             <h1>Las Altas Tierras</h1>
@@ -25,5 +26,6 @@
             <h2>WIP</h2>
         </div>
     </main>
+    <footer></footer>
 </body>
 </html>
