--- a/LND/unidad-02/tareas/tarea14-infinity/projects.html
+++ b/LND/unidad-02/tareas/tarea14-infinity/projects.html
@@ -17,6 +17,7 @@
         </ul>
         <h1><a href="index.html">JessDotZero</a></h1>
     </nav>
+    <div class="color-bg"></div>
     <main>
         <div class="title">
             <h1>Mis proyectos</h1>
@@ -65,5 +66,6 @@
             </section>
         </div>
     </main>
+    <footer></footer>
 </body>
 </html>
