--- a/LND/unidad-02/tareas/tarea14-infinity/main_project.html
+++ b/LND/unidad-02/tareas/tarea14-infinity/main_project.html
@@ -23,7 +23,22 @@
             <h1>Las Altas Tierras</h1>
         </div>
         <div class="container">
-            <h2>WIP</h2>
+            <q>Y del vacío nacieron dos figuras celestiales, primordiales, que sostendrían la realidad a la que te aferras; Tiempo y Espacio, en perfecta armonía. 
+                Y ahí también llegó el cáncer del universo. El Factor Caótico, nacido de la gracia de lo desconocido, penetra e invaden hasta las raices del Árbol del Universo, y llena los mundos de arte y calamidad.
+            </q>
+            <hr>
+            <h4>Soy el Ente, y has encontrado el producto de mi corrupta imaginación...</h4>
+            <div class="main-project-gallery">
+                <div class="item">
+                    <h3>Videojuegos</h3>
+                </div>
+                <div class="item">
+                    <h3>La Gaceta Imperial</h3>
+                </div>
+                <div class="item">
+                    <h3>Relatos</h3>
+                </div>
+            </div>
         </div>
     </main>
     <footer></footer>
