--- a/LND/unidad-02/tareas/tarea14-infinity/projects.html
+++ b/LND/unidad-02/tareas/tarea14-infinity/projects.html
@@ -35,31 +35,31 @@
                     <div class="item">
                         <a href="">
                             <h4>Colaboración para The Box - Godot Jam</h4>
-                            <img src="img/placeholder-bg.png" alt="placeholder">
+                            <img src="" alt="">
                         </a>
                     </div>    
                     <div class="item">
                         <a href="">
-                            <!-- <h4>Generador de banners personalizados para Mundo Mágico L&L - En progreso</h4> -->
-                            <img src="img/placeholder-bg.png" alt="placeholder">
+                            <h4>Generador de banners personalizados para Mundo Mágico L&L - En progreso</h4>
+                            <img src="" alt="">
                         </a>
                     </div>
                     <div class="item">
                         <a href="">
-                            <!-- <h4>Turbulent Ship (Remake) - En progreso</h4> -->
-                            <img src="img/placeholder-bg.png" alt="placeholder">
+                            <h4>Turbulent Ship (Remake) - En progreso</h4>
+                            <img src="" alt="">
                         </a>
                     </div>
                     <div class="item">
                         <a href="">
                            <!-- RELLENO -->
-                            <img src="img/placeholder-bg.png" alt="placeholder">
+                            <!-- <img src="img/placeholder-bg.png" alt="placeholder"> -->
                         </a>
                     </div>
                     <div class="item">
                         <a href="">
                             <!-- RELLENO -->
-                            <img src="img/placeholder-bg.png" alt="placeholder">
+                            <!-- <img src="img/placeholder-bg.png" alt="placeholder"> -->
                         </a>
                     </div>
                 </div>    
