Se actualiza pagina

--- a/LND/unidad-02/tareas/tarea14-infinity/about.html
+++ b/LND/unidad-02/tareas/tarea14-infinity/about.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JessDotZero - Sobre mi</title>
     <link rel="stylesheet" href="style/main.css">
-    <link rel="stylesheet" href="style/navbar.css">
 </head>
 <body>
     <nav class="navbar">
@@ -13,7 +12,6 @@
             <li><a href="main_project.html">Las Altas Tierras</a></li>
             <li><a href="about.html">Sobre mi</a></li>
             <li><a href="projects.html">Proyectos</a></li>
-            <li><a href="notes.html">Notas</a></li>
         </ul>
         <h1><a href="index.html">JessDotZero</a></h1>
     </nav>
@@ -45,8 +43,8 @@
                     <li>Youtube</li>
                     <li>Twitch</li>
                 </ul>
-                <h2>Contacta</h2>
                 <form action="form-data.dat" method="get">
+                    <h2>Contacta</h2>
                     <label for="i-email">Email</label><br>
                     <input type="email" name="i-email" id="i-email" size="50"><br>
                     <label for="i-asunto">Asunto</label><br>
@@ -59,7 +57,13 @@
         </div>
     </main>
     <footer>
-        
+        <table class="icons-container">
+            <tr>
+                <td>GitHub</td>
+                <td>Itch.Io</td>
+                <td>Linkedin</td>
+            </tr>
+        </table>
     </footer>
 </body>
 </html>
