--- a/LND/unidad-02/tareas/tarea14-infinity/main_project.html
+++ b/LND/unidad-02/tareas/tarea14-infinity/main_project.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JessDotZero - Las Altas Tierras</title>
     <link rel="stylesheet" href="style/main.css">
-    <link rel="stylesheet" href="style/navbar.css">
 </head>
 <body>
     <nav class="navbar">
@@ -13,7 +12,6 @@
             <li><a href="main_project.html">Las Altas Tierras</a></li>
             <li><a href="about.html">Sobre mi</a></li>
             <li><a href="projects.html">Proyectos</a></li>
-            <li><a href="notes.html">Notas</a></li>
         </ul>
         <h1><a href="index.html">JessDotZero</a></h1>
     </nav>
@@ -39,6 +37,8 @@
                     <h3>Relatos</h3>
                 </div>
             </div>
+            <hr>
+            <h2>Origenes del Ente y las Altas Tierras</h2>
         </div>
     </main>
     <footer></footer>
