--- a/LND/unidad-02/tareas/tarea14-infinity/index.html
+++ b/LND/unidad-02/tareas/tarea14-infinity/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JessDotZero</title>
-    <link rel="stylesheet" href="style/index.css">
-    <link rel="stylesheet" href="style/navbar.css">
+    <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
     <nav class="navbar">
@@ -13,7 +12,6 @@
             <li><a href="main_project.html">Las Altas Tierras</a></li>
             <li><a href="about.html">Sobre mi</a></li>
             <li><a href="projects.html">Proyectos</a></li>
-            <li><a href="notes.html">Notas</a></li>
         </ul>
         <h1><a href="index.html">JessDotZero</a></h1>
     </nav>
